kubernates/fastapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  creationTimestamp: null
  labels:
    name: fastapi-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
        - name: fastapi-app
          image: funnydmantest/kube:latest
