kubernates/fastapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app
  labels:
    service: fastapi-app
spec:
  selector:
    app: fastapi-app
  ports:
    - port: 8000
      targetPort: 8000
